# codex-reset-credits

./: LICENSE  README.md  pyproject.toml
src/codex_reset_credits/: __init__.py  api.py  app_patch.py  asar.py  auth.py  cli.py  formatting.py  models.py  render.py
tests/: test_app_patch.py  test_formatting.py
