[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-reset-credits"
version = "0.1.0"
description = "Show Codex rate-limit reset-credit expiration times from local Codex auth."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "DrFok" }]
classifiers = [
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Utilities",
]
dependencies = []

[project.scripts]
codex-reset-credits = "codex_reset_credits.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

